--- a/ocrTestApp/Base.lproj/Main.storyboard
+++ b/ocrTestApp/Base.lproj/Main.storyboard
@@ -137,6 +137,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
+                                                            <action selector="viewResultsTapped:" destination="ku4-b8-2pF" eventType="touchUpInside" id="HZF-8F-jkZ"/>
                                                             <segue destination="kZn-J0-iSP" kind="show" identifier="viewResultsSegue" id="ly0-N0-D01"/>
                                                         </connections>
                                                     </button>
@@ -241,6 +242,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iN5-Ed-bol">
                                 <rect key="frame" x="20" y="88" width="374" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="kZn-J0-iSP" id="aqI-S8-CTD"/>
+                                    <outlet property="delegate" destination="kZn-J0-iSP" id="TsM-zN-Zsb"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
